update: Update index page

--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@ layout: default
 title: mediocrity
 ---
 
-<a class="a-full-background" href="https://instagr.am/mediocrity.xyz" title="mediocrity on Instagram"></a>
+<a class="a-full-background" href="https://instagr.am/mediocrity.xyz" title="mediocrity on Instagram"><span>Introducing<br><strong>mediocrity</strong></span></a>
